pretend/tests/builds/requests.stderr
error: Failed to generate pretend implementation
 --> $DIR/requests.rs:6:7
  |
6 | trait Test {
  |       ^^^^

error: Method must have the `#[request]` attribute
 --> $DIR/requests.rs:7:5
  |
7 |     async fn test_1(&self) -> Result<()>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Method must have the `#[request]` attribute only once
  --> $DIR/requests.rs:8:5
   |
8  | /     #[request(method = "GET", path = "/get")]
9  | |     #[request(method = "GET", path = "/get")]
10 | |     async fn test_2(&self) -> Result<()>;
   | |_________________________________________^

error: `#[request]` attribute defined here
 --> $DIR/requests.rs:8:5
  |
8 |     #[request(method = "GET", path = "/get")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[request]` attribute defined here
 --> $DIR/requests.rs:9:5
  |
9 |     #[request(method = "GET", path = "/get")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[request]` attribute must only have `method` and `path`
  --> $DIR/requests.rs:11:5
   |
11 |     #[request(method = "GET")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[request]` attribute must only have `method` and `path`
  --> $DIR/requests.rs:13:5
   |
13 |     #[request(path = "/get")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[request]` attribute must only have `method` and `path`
  --> $DIR/requests.rs:15:5
   |
15 |     #[request(method = "GET", path = "/get", other = "something")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
